# PAF_pipeline

./: .gitignore  CMakeLists.txt  README.md
dada/: CMakeLists.txt  dada.header  dada_header.json  dada_header_code_generator.py  test_dada_header.c
data/: 512MHz_1ant1pol.header
docs/baselines/: GPUbaselineSat.ipynb
header/: 512MHz_1ant1pol_4096B.header  512MHz_1ant1pol_8192B.header  512MHz_beamform_4096B.header  paf_test.header
include/: dada_header.h  dada_util.h  hdf5_util.h  krnl.h  test.h  udp.h
include/cuda/: amplitudephasecalculator.h  complexbuilder.h  complexsplitter.h  cuda_complex_utilities.h  cuda_memory_utilities.h  cuda_real_utilities.h  cuda_utilities.h  devicedataextractor.h  devicememoryallocator.h  hostdataextractor.h  hostmemoryallocator.h  managedmemoryallocator.h  realconvertor.h  realdifferentiator.h  realgenerators.h  realhistogram.h  realreduction.h  realstatistic.h  sharedutilities.h
pipeline/: CMakeLists.txt  beamform.hh  pipeline_1ant1pol.cu  pipeline_dada_1ant1pol.cu  pipeline_dada_beamform.cu
scripts/: pad_dada_header.py  pipeline.sh  udp2db.sh
src/: CMakeLists.txt  dada_header.c  dada_util.c  hdf5_util.c  krnl.cu  test.cpp  udp.cpp
src/baselines/: GPUbaselineSat.py
test/: CMakeLists.txt  GPUsingleFFT.py  compare_data.py  plot_dada.py  power_compare.py  raw_data.py  rfft_compare.py  test_cufft.cu  test_power_taccumulate_1ant1pol.cu  test_raw_vs_cuda.py  test_rfft.cu  test_rfft.py  test_tf2ft_1ant1pol.cu  test_unpack_1ant1pol.cu
udp/: CMakeLists.txt  README.md  udp.cpp  udp.h  udp2db.cpp  udpgen.cpp
